--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
+    "@heroicons/react": "1.0.6",
+    "draft-js": "^0.11.7",
+    "lodash.debounce": "^4.0.8",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -13,6 +17,8 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/draft-js": "^0.11.9",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
